--- a/orca_gazebo/package.xml
+++ b/orca_gazebo/package.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
 
   <name>orca_gazebo</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>Orca simulation environment</description>
 
   <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
@@ -13,13 +14,15 @@
 
   <author>Clyde McQueen</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>gazebo</depend>
   <depend>gazebo_ros</depend>
+  <depend>geometry_msgs</depend>
   <depend>orca_base</depend>
   <depend>orca_msgs</depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
+  <depend>rclcpp</depend>
+  <depend>rclpy</depend>
 
   <export>
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
