--- a/orca_gazebo/package.xml
+++ b/orca_gazebo/package.xml
@@ -25,6 +25,7 @@
   <depend>rclpy</depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
   </export>
 
