Inject URDF file into simulation

--- a/orca_gazebo/CMakeLists.txt
+++ b/orca_gazebo/CMakeLists.txt
@@ -146,4 +146,10 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 
+## Install Python scripts
+install(
+  PROGRAMS src/inject_entity.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
