Load parameters using Peter's macros

--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -42,6 +42,7 @@ include_directories(
 add_executable(
   base_node
   src/base_node.cpp
+  src/base_context.cpp
   src/motion.cpp
   src/mission.cpp
 )
