Added 8 more ArUco markers

--- a/orca_gazebo/worlds/orca_map.yaml
+++ b/orca_gazebo/worlds/orca_map.yaml
@@ -43,3 +43,43 @@ markers:
     f: 1
     xyz: [0, 0, -4]
     rpy: [0, 0, -1.57]
+  - id: 8
+    u: 1
+    f: 1
+    xyz: [-2, 0, -4]
+    rpy: [0, 0, -1.57]
+  - id: 9
+    u: 1
+    f: 1
+    xyz: [-2, 2, -4]
+    rpy: [0, 0, -1.57]
+  - id: 10
+    u: 1
+    f: 1
+    xyz: [-2, 4, -4]
+    rpy: [0, 0, -1.57]
+  - id: 11
+    u: 1
+    f: 1
+    xyz: [-2, 6, -4]
+    rpy: [0, 0, -1.57]
+  - id: 12
+    u: 1
+    f: 1
+    xyz: [-4, 6, -4]
+    rpy: [0, 0, -1.57]
+  - id: 13
+    u: 1
+    f: 1
+    xyz: [-4, 4, -4]
+    rpy: [0, 0, -1.57]
+  - id: 14
+    u: 1
+    f: 1
+    xyz: [-4, 2, -4]
+    rpy: [0, 0, -1.57]
+  - id: 15
+    u: 1
+    f: 1
+    xyz: [-4, 0, -4]
+    rpy: [0, 0, -1.57]
