--- a/orca_driver/package.xml
+++ b/orca_driver/package.xml
@@ -16,12 +16,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>cv_bridge</depend>
   <depend>orca_msgs</depend>
   <depend>phidgets_imu</depend>
   <depend>python-smbus</depend>
   <depend>roscpp</depend>
   <depend>rospy</depend>
-  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
