All 3 UP lights

--- a/orca_driver/CMakeLists.txt
+++ b/orca_driver/CMakeLists.txt
@@ -98,22 +98,22 @@ ament_target_dependencies(
 install(
   TARGETS driver_node opencv_camera_node opencv_camera
   EXPORT opencv_camera
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
+  RUNTIME DESTINATION lib/${PROJECT_NAME} # ros2 run requires this location
 )
 
 # Install Python nodes
 install(
   PROGRAMS  # PROGRAMS sets execute bits, FILES clears them
   scripts/bar30_node.py
-  DESTINATION lib/${PROJECT_NAME} # TODO or just lib?
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 ## Install various directories
 install(
   DIRECTORY launch cfg
-  DESTINATION share/${PROJECT_NAME} # TODO or just share?
+  DESTINATION share/${PROJECT_NAME}
 )
 
 ament_package()
