Use odom_filter package

--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -12,8 +12,6 @@ if($ENV{CLION_IDE})
 endif()
 
 find_package(ament_cmake REQUIRED)
-find_package(builtin_interfaces REQUIRED)
-find_package(Eigen3)
 find_package(fiducial_vlam_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
@@ -21,24 +19,12 @@ find_package(orca_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(std_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(visualization_msgs REQUIRED)
 
 include_directories(
   include
-  ${builtin_interfaces_INCLUDE_DIRS}
-  ${Eigen3_INCLUDE_DIRS}
-  ${fiducial_vlam_msgs_INCLUDE_DIRS}
-  ${geometry_msgs_INCLUDE_DIRS}
-  ${nav_msgs_INCLUDE_DIRS}
-  ${orca_msgs_INCLUDE_DIRS}
-  ${rclcpp_INCLUDE_DIRS}
-  ${sensor_msgs_INCLUDE_DIRS}
-  ${tf2_INCLUDE_DIRS}
-  ${tf2_ros_INCLUDE_DIRS}
-  ${visualization_msgs_INCLUDE_DIRS}
 )
 
 #=============
@@ -67,26 +53,6 @@ ament_target_dependencies(
 )
 
 #=============
-# Filter node
-#=============
-
-add_executable(
-  filter_node
-  src/filter_node.cpp
-  src/kf.cpp
-)
-
-ament_target_dependencies(
-  filter_node
-  geometry_msgs
-  nav_msgs
-  rclcpp
-  std_msgs
-  tf2
-  tf2_msgs
-)
-
-#=============
 # Test node
 #=============
 
@@ -103,7 +69,7 @@ ament_target_dependencies(
 
 ament_export_include_directories(include)
 
-install(TARGETS base_node filter_node DESTINATION lib/${PROJECT_NAME})
+install(TARGETS base_node DESTINATION lib/${PROJECT_NAME})
 install(DIRECTORY include/${PROJECT_NAME} DESTINATION include)
 
 ament_package()
