--- a/orca_gazebo/worlds/small_map.yaml
+++ b/orca_gazebo/worlds/small_map.yaml
@@ -7,79 +7,79 @@ markers:
     u: 1
     f: 1
     xyz: [1, 0, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 1
     u: 1
     f: 1
     xyz: [1, 1, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 2
     u: 1
     f: 1
     xyz: [1, 2, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 3
     u: 1
     f: 1
     xyz: [1, 3, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 4
     u: 1
     f: 1
     xyz: [0, 3, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 5
     u: 1
     f: 1
     xyz: [0, 2, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 6
     u: 1
     f: 1
     xyz: [0, 1, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 7
     u: 1
     f: 1
     xyz: [0, 0, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 8
     u: 1
     f: 1
     xyz: [-1, 0, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 9
     u: 1
     f: 1
     xyz: [-1, 1, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 10
     u: 1
     f: 1
     xyz: [-1, 2, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 11
     u: 1
     f: 1
     xyz: [-1, 3, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 12
     u: 1
     f: 1
     xyz: [-2, 3, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 13
     u: 1
     f: 1
     xyz: [-2, 2, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 14
     u: 1
     f: 1
     xyz: [-2, 1, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
   - id: 15
     u: 1
     f: 1
     xyz: [-2, 0, -1]
-    rpy: [0, 0, -1.57]
+    rpy: [0.0, -0.0, -1.5707963267948968]
