systemd service plus screen

--- a/orca_driver/CMakeLists.txt
+++ b/orca_driver/CMakeLists.txt
@@ -121,6 +121,7 @@ install(
 install(
   PROGRAMS  # PROGRAMS sets execute bits, FILES clears them
   scripts/bar30_node.py
+  scripts/start_driver.sh
   DESTINATION lib/${PROJECT_NAME}
 )
 
