--- a/orca_base/package.xml
+++ b/orca_base/package.xml
@@ -9,8 +9,8 @@
     <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
     <license>BSD</license>
 
-    <url type="repository">https://github.com/clydemcqueen/orca.git</url>
-    <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>
+    <url type="repository">https://github.com/clydemcqueen/orca2.git</url>
+    <url type="bugtracker">https://github.com/clydemcqueen/orca2/issues</url>
 
     <author>Clyde McQueen</author>
 
