--- a/orca_base/package.xml
+++ b/orca_base/package.xml
@@ -22,6 +22,7 @@
     <depend>orca_msgs</depend>
     <depend>rclcpp</depend>
     <depend>rclpy</depend>
+    <depend>ros2_shared</depend>
     <depend>sensor_msgs</depend>
     <depend>tf2</depend>
     <depend>tf2_ros</depend>
