--- a/orca_driver/package.xml
+++ b/orca_driver/package.xml
@@ -9,8 +9,8 @@
     <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
     <license>BSD</license>
 
-    <url type="repository">https://github.com/clydemcqueen/orca.git</url>
-    <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>
+    <url type="repository">https://github.com/clydemcqueen/orca2.git</url>
+    <url type="bugtracker">https://github.com/clydemcqueen/orca2/issues</url>
 
     <author>Clyde McQueen</author>
 
@@ -22,6 +22,7 @@
     <depend>python-smbus</depend>
     <depend>rclcpp</depend>
     <depend>rclpy</depend>
+    <depend>ros2_shared</depend>
     <depend>sensor_msgs</depend>
 
     <export>
