--- a/orca_gazebo/CMakeLists.txt
+++ b/orca_gazebo/CMakeLists.txt
@@ -8,8 +8,6 @@ endif ()
 
 # Emulate colcon by providing paths to other projects in the workspace
 if ($ENV{CLION_IDE})
-  set(gazebo_dev_DIR "${PROJECT_SOURCE_DIR}/../../../install/gazebo_dev/share/gazebo_dev/cmake")
-  set(gazebo_ros_DIR "${PROJECT_SOURCE_DIR}/../../../install/gazebo_ros/share/gazebo_ros/cmake")
   set(orca_base_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_base/share/orca_base/cmake")
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
 endif ()
@@ -26,16 +24,9 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(sensor_msgs REQUIRED)
 
-# Set up include directories
+# Package includes not needed for CMake >= 2.8.11
 include_directories(
   include
-  ${gazebo_ros_INCLUDE_DIRS}
-  ${geometry_msgs_INCLUDE_DIRS}
-  ${nav_msgs_INCLUDE_DIRS}
-  ${orca_base_INCLUDE_DIRS}
-  ${orca_msgs_INCLUDE_DIRS}
-  ${rclcpp_INCLUDE_DIRS}
-  ${sensor_msgs_INCLUDE_DIRS}
 )
 
 # Create plugins (shared libraries) and executables
@@ -43,64 +34,71 @@ include_directories(
 add_library(OrcaBarometerPlugin SHARED src/barometer_plugin.cpp)
 ament_target_dependencies(
   OrcaBarometerPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "geometry_msgs"
-  "orca_msgs"
-  "rclcpp"
+  gazebo_dev
+  gazebo_ros
+  geometry_msgs
+  orca_msgs
+  rclcpp
 )
 ament_export_libraries(OrcaBarometerPlugin)
 
 add_library(OrcaBuoyancyPlugin SHARED src/buoyancy_plugin.cpp)
 ament_target_dependencies(
   OrcaBuoyancyPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "rclcpp"
+  gazebo_dev
+  gazebo_ros
+  rclcpp
 )
 ament_export_libraries(OrcaBuoyancyPlugin)
 
 add_library(OrcaDragPlugin SHARED src/drag_plugin.cpp)
 ament_target_dependencies(
   OrcaDragPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "rclcpp"
+  gazebo_dev
+  gazebo_ros
+  orca_base
+  rclcpp
 )
 ament_export_libraries(OrcaDragPlugin)
 
 add_library(OrcaThrusterPlugin SHARED src/thruster_plugin.cpp)
 ament_target_dependencies(
   OrcaThrusterPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "orca_msgs"
-  "rclcpp"
+  gazebo_dev
+  gazebo_ros
+  orca_base
+  orca_msgs
+  rclcpp
 )
 ament_export_libraries(OrcaThrusterPlugin)
 
 add_library(OrcaGroundTruthPlugin SHARED src/ground_truth_plugin.cpp)
 ament_target_dependencies(
   OrcaGroundTruthPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "nav_msgs"
-  "rclcpp"
+  gazebo_dev
+  gazebo_ros
+  nav_msgs
+  rclcpp
 )
 ament_export_libraries(OrcaGroundTruthPlugin)
 
 add_library(OrcaIMUPlugin SHARED src/imu_plugin.cpp)
 ament_target_dependencies(
   OrcaIMUPlugin
-  "gazebo_dev"
-  "gazebo_ros"
-  "orca_msgs"
-  "rclcpp"
-  "sensor_msgs"
+  gazebo_dev
+  gazebo_ros
+  orca_msgs
+  rclcpp
+  sensor_msgs
 )
 ament_export_libraries(OrcaIMUPlugin)
 
 add_executable(orca_gazebo_test src/test.cpp)
+ament_target_dependencies(
+  orca_gazebo_test
+  gazebo_dev
+  geometry_msgs
+)
 
 ## Export dependencies
 ament_export_dependencies(gazebo_dev)
