--- a/orca_msgs/CMakeLists.txt
+++ b/orca_msgs/CMakeLists.txt
@@ -32,14 +32,14 @@ find_package(std_msgs REQUIRED)
 # Generate ROS messages
 rosidl_generate_interfaces(
   orca_msgs
-  "msg/Barometer.msg"
-  "msg/Battery.msg"
-  "msg/Control.msg"
-  "msg/Leak.msg"
-  "msg/Proc.msg"
-  "msg/Pose.msg"
-  "msg/PoseError.msg"
-  "msg/PoseStamped.msg"
+  msg/Barometer.msg
+  msg/Battery.msg
+  msg/Control.msg
+  msg/Leak.msg
+  msg/Proc.msg
+  msg/Pose.msg
+  msg/PoseError.msg
+  msg/PoseStamped.msg
   DEPENDENCIES std_msgs
 )
 
